# sensor-cal

./: CMakeLists.txt  README.md
src/: sensor_cal.c  sensor_cal.h  test.c
test/: genTestData.m  lsq.wxm  lsq.wxmx  test.c
